--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -11,6 +13,31 @@
         // Your JavaScript code goes here
         console.log("Hello, world!");
     </script>
+    <div class="header-hero">
+        <div class="header">
+            <div class="left-side">
+                <div class="logo">
+                Header Logo
+                </div>
+            </div>
+            
+            <div class="right-side">
+                <ul class="links">
+                <li><a href="https://google.com">header link one</a></li>
+                <li><a href="https://google.com">header link two</a></li>
+                <li><a href="https://google.com">header link three</a></li>
+                </ul>
+            </div>
+        </div>
 
+        <div class="hero">
+            <div class="left-side">
+            </div>
+
+            <div class="right-side">
+            </div>
+        </div>    
+
+    </div>
 </body>
 </html>
