--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
 
         <div class="hero">
             <div class="left-side">
+                <div class="hero-main-text">This website is awesome</div>
+                <div class="hero-sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="signup">
+                    <button style="padding: 12px 24px; background: #3882f6; color: #f9faf8; border: none; border-radius: 8px;">Sign up</button>
+                </div>
             </div>
 
             <div class="right-side">
+                <img src="./images/marco-grosso-yTg8tI_iy6Q-unsplash.jpg" alt="crane">
             </div>
         </div>    
 
