--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="right-side">
-                <img src="./images/marco-grosso-yTg8tI_iy6Q-unsplash.jpg" alt="crane">
+                <img src="./images/marco-grosso-yTg8tI_iy6Q-unsplash.png" alt="flamingo" height="200">
             </div>
         </div>    
 
