--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         // Your JavaScript code goes here
         console.log("Hello, world!");
     </script>
+
     <div class="header-hero">
         <div class="header">
             <div class="left-side">
@@ -21,13 +22,11 @@
                 </div>
             </div>
             
-            <div class="right-side">
-                <ul class="links">
+            <ul class="links">
                 <li><a href="https://google.com">header link one</a></li>
                 <li><a href="https://google.com">header link two</a></li>
                 <li><a href="https://google.com">header link three</a></li>
-                </ul>
-            </div>
+            </ul>
         </div>
 
         <div class="hero">
@@ -39,10 +38,15 @@
                 </div>
             </div>
 
-            <div class="right-side">
+            <div class="img">
                 <img src="./images/marco-grosso-yTg8tI_iy6Q-unsplash.png" alt="flamingo" height="200">
             </div>
         </div>    
+
+    </div>
+    <div class="information">
+        <div class="info-title">Some random information.</div>
+        <p>This is a simple landing page created as part of a project.</p>
 
     </div>
 </body>
