--- a/index.html
+++ b/index.html
@@ -46,8 +46,52 @@
     </div>
     <div class="information">
         <div class="info-title">Some random information.</div>
-        <p>This is a simple landing page created as part of a project.</p>
+        <div class="info-row">
 
+            <div class="image-box-text">
+                <div class="image-box">
+                    <img src="./images/neeqolah-creative-works-EgNrpX4g-Rg-unsplash.png" alt="square" height="175"> 
+                </div>  
+                <div class="image-text">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+
+            <div class="image-box-text">
+                <div class="image-box">
+                    <img src="./images/wayne-robinson-Ud9lKknu9c0-unsplash.png" alt="coconuts" height="175">
+                </div>  
+                <div class="image-text">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>  
+            </div>
+
+            <div class="image-box-text">
+                <div class="image-box">
+                    <img src="./images/raguvarasan-ambikapathi-p5lDYaK217A-unsplash.png" alt="flower" height="175">
+                </div>
+                <div class="image-text">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+
+            <div class="image-box-text">
+                <div class="image-box">
+                    <img src="./images/rich-clensy-m146af2Kj_o-unsplash.png" alt="prague" height="175">
+                </div>
+                <div class="image-text">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="quote-section">
+        <blockquote>
+            <p>"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</p>
+            <footer>- Thor, God of Thunder</footer>
+        </blockquote>
+    </div>
+
 </body>
 </html>
