Call to action section

--- a/index.html
+++ b/index.html
@@ -93,5 +93,16 @@
         </blockquote>
     </div>
 
+    <div class="call-to-action">
+        <div class="action-left">
+            <div class="action-text-1">Call to action! It's time!</div>
+            <div class="action-text-2">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="action-right">
+            <div class="signup">
+                <button style="padding: 6px 24px; background: #3882f6; color: #f9faf8; border: 4px solid #f9faf8; border-radius: 8px; width: 150px; font-size: 18px;">Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
