--- a/index.html
+++ b/index.html
@@ -104,5 +104,11 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <!-- <div class="footer-left"> -->
+            <div class="footer-text">Copyright © 2025 Julamot for The Odin Project</div>
+        <!-- </div> -->
+    </footer>
 </body>
 </html>
